# renju

./: .gitmodules  CMakeLists.txt  Renju.cpp  Renju.hpp  main.cpp  make_table.cpp
